// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default text section correctly 1`] = `
<section
  className="src-components-section-text__section-default src-components-section-text__section"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a smallprint text section correctly 1`] = `
<section
  className="src-components-section-text__section-smallprint src-components-section-text__section"
>
  <div
    id="child"
  />
</section>
`;
